# quant-core-poc

./: .gitignore  Quant_core.dbquery.ipynb  README.md  databricks.yml  pyproject.toml  pytest.ini  requirements-test.txt
.github/workflows/: ci.yml
config/: quant_core_config.yaml
docs/: CICD_COMPLETE_GUIDE.md  CICD_QUICK_REFERENCE.md  CICD_SETUP.md  COMPLETION_SUMMARY.md  README.md  business-data-model-guide.md  landing-pattern.md  presentation-outline.md  project-analysis-and-recommendations.md  solution-architecture.md  yaml-files-guide.md
docs/architecture/: business-data-model-guide.md  solution-architecture.md
docs/operations/: landing-pattern.md  partition-replacement-fix.md  scheduling-and-cicd.md
docs/reference/: yaml-files-guide.md
docs/reviews/: project-analysis-and-recommendations.md
notebooks/00_setup/: 00_environment_setup.py
notebooks/01_ingest_bronze/: 01_bronze_ingestion.py
notebooks/02_transform_silver/: 02_silver_transformation.py
notebooks/03_publish_gold/: 03_gold_calculations.py
resources/: quant_core_job.yml
scripts/: generate_mock_data.py
scripts/mock_volume_data/cashflows/: cashflows.csv
scripts/mock_volume_data/dimensions/: asset_classes.csv  counterparties.csv  currencies.csv  instruments.csv  market_data_sources.csv  portfolios.csv
scripts/mock_volume_data/market_prices_daily/: market_prices_daily.csv
sql/: gold_views.sql
src/quant_core/: __init__.py  models.py
tests/integration/: test_package_layout.py  test_pipeline.py
tests/unit/: test_finance.py  test_mock_data.py  test_silver_transformations.py
(+35 files in other folders)
